--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
 FROM quay.io/sampandey001/secktor
-RUN git clone https://github.com/nipuna15/Secktor-Md /root/SamPandey001
+RUN git clone https://github.com/nipuna15/Secktor-Md /root/moxie 
 WORKDIR /root/moxie/
 RUN npm install npm@latest
 RUN yarn install --network-concurrency 1
