--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-               "name": "secktor-md",
-               "version": "0.0.7",
-               "description": "Multi device whatsapp bot by SamPandey001.",
+               "name": "Blue-Lion",
+               "version": "0.0.2",
+               "description": "Multi device whatsapp bot by moxie.",
                "main": "lib/client.js",
                "type": "commonjs",
                "license": "GPL-3.0",
@@ -9,7 +9,7 @@
                 "start": "pm2 start lib/client.js --deep-monitoring --attach --name secktor",
                 "stop": "pm2 stop secktor"
                 },
-               "author": "SamPandey001",
+               "author": "moxie",
               "dependencies": {
                        "@whiskeysockets/baileys": "git+https://github.com/sampandey001/baileys", 
                        "@adiwajshing/keyed-db": "^0.2.4",
