--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
                "type": "commonjs",
                "license": "GPL-3.0",
    "scripts": {
-                "start": "pm2 start lib/client.js --deep-monitoring --attach --name Moxie",
-                "stop": "pm2 stop Moxie"
+                "start": "pm2 start lib/client.js --deep-monitoring --attach --name secktor",
+                "stop": "pm2 stop secktor"
                 },
                "author": "moxie",
               "dependencies": {
