--- a/app.json
+++ b/app.json
@@ -18,6 +18,10 @@
       "description": "Automatically saves status of every person and sends in log number.",
        "required" :false
       },
+      "AUTO_READ_STATUS ": {
+      "description":"Automatically seen status.",
+      "required" :false
+      },
     "HEROKU_API_KEY": {
     "description": "Put HEROKU API KEY",
      "required" :false
