--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Blue-Lion",
+  "name": "Blue-Lion-Bot",
   "description": "A Whatsapp md bot built in NodeJs to make experience better",
   "logo": "https://raw.githubusercontent.com/nipuna15/nipuna15/main/IMG-20230613-WA0008.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "Zero-Two", "SecktorBot", "Secktor","SecktorMD","theme bot","multi device","baileys","Sam Pandey"],
