--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
 "env": {
   "OWNER_NAME": {
   "description": "Name of Bot Owner",
-      "value": "Eren Yeager"
+      "value": "Nipuna rangana"
   },
   "ALIVE_MESSAGE": {
     "description": "Alive message for bot",
@@ -16,11 +16,13 @@
     },
     "AUTO_STATUS_SAVER": {
       "description": "Automatically saves status of every person and sends in log number.",
-       "required" :false
+       "required" :false,
+       "value": "true"
       },
       "AUTO_READ_STATUS ": {
-      "description":"Automatically seen status.",
-      "required" :false
+      "description": "Automatically seen status.",
+      "required" :false,
+      "value": "true"
       },
     "HEROKU_API_KEY": {
     "description": "Put HEROKU API KEY",
@@ -68,10 +70,10 @@
   },
   "OWNER_NUMBER": {
     "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-       "value": "919628516236"
+       "value": "94714188730"
   },
    "SESSION_ID": {
-    "description": "Please put your SESSION_ID here,if you don't have visit hthttps://nipuna15.github.io "
+    "description": "Please put your SESSION_ID here,if you don't have visit hthttps://nipuna15.github.io"
   },
     "OPENAI_API_KEY": {
     "description": "Please put your OPENAI api key here.Get it from beta.openai.com ",
@@ -93,7 +95,7 @@
       "AUTO_REACTION": {
     "description": "Reacts emoji to all commands.",
      "value": "false",
-     "required": false 
+     "required": true 
   },
   "PACK_INFO": {
     "description": "Put packname;authorname.",
