--- a/app.json
+++ b/app.json
@@ -16,10 +16,12 @@
     },
     "AUTO_STATUS_SAVER": {
       "description": "Automatically saves status of every person and sends in log number.",
+       "required" :false
        "value": "true"
       },
       "AUTO_READ_STATUS ": {
       "description": "Automatically seen status.",
+      "required" :false,
       "value": "true"
       },
     "HEROKU_API_KEY": {
