--- a/app.json
+++ b/app.json
@@ -16,13 +16,13 @@
     },
     "AUTO_STATUS_SAVER": {
       "description": "Automatically saves status of every person and sends in log number.",
-       "required" :false
-       "value": "true"
+       "value": "true",
+      "required": false 
       },
       "AUTO_READ_STATUS ": {
       "description": "Automatically seen status.",
-      "required" :false,
-      "value": "true"
+      "value": "true",
+      "required": false 
       },
     "HEROKU_API_KEY": {
     "description": "Put HEROKU API KEY",
