--- a/app.json
+++ b/app.json
@@ -17,6 +17,11 @@
       "AUTO_READ_STATUS ": {
       "description": "Automatically seen status.",
       "value": "true",
+      "required": false
+    },
+"AUTO_STATUS_SAVER": {
+      "description": "Automatically saves status of every person and sends in log number.",
+      "value": "true",
       "required": false 
       },
     "HEROKU_API_KEY": {
