--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
                        "awesome-phonenumber": "^3.3.0",
                        "anime-character-random": "latest",
                        "@sl-code-lords/esana-news":"latest",
+                       "aptoide-scraper": "latest",
+                       "google-play-scraper": " google-play-scraper",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
                        "crypto-js":"latest",
