--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
                        "anime-character-random": "latest",
                        "@sl-code-lords/esana-news":"latest",
                        "aptoide-scraper": "latest",
-                       "google-play-scraper": " google-play-scraper",
+                       "google-play-scraper": "latest",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
                        "crypto-js":"latest",
