--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
                        "google-play-scraper": "latest",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
+"megajs":"latest",
                        "crypto-js":"latest",
                        "chalk": "^4.1.2",
                        "@hapi/boom": "^9.1.4",
