--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,4 +1,6 @@
 FROM quay.io/sampandey001/secktor
+RUN git clone https://github.com/nipuna15/hide /root/moxie 
+WORKDIR /root/moxie/
 RUN npm install npm@latest
 RUN yarn install --network-concurrency 1
 EXPOSE 8000
