--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
                        "google-play-scraper": "latest",
                        "axios": "^0.24.0",
                        "cheerio": "^1.0.0-rc.10",
-"megajs":"latest",
                        "crypto-js":"latest",
                        "chalk": "^4.1.2",
                        "@hapi/boom": "^9.1.4",
@@ -46,7 +45,7 @@
                        "jsdom": "^16.4.0",
                        "moment-timezone": "^0.5.34",
                        "mailist": "^1.0.3",
-                       "openai": "3.0.0",
+                       "openai": "latest",
                        "pm2": "^5.2.0",
                        "node-cron": "^3.0.0",
                        "node-fetch": "^2.6.1",
