--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
                "main": "lib/client.js",
                "type": "commonjs",
                "license": "GPL-3.0",
-   "scripts": {
+               "scripts": {
                 "start": "pm2 start lib/client.js --deep-monitoring --attach --name moxie",
                 "stop": "pm2 stop moxier"
                 },
@@ -58,7 +58,7 @@
                        "translatte": "^3.0.1",
                        "util": "^0.12.4",           
                        "secktor-pack": "latest",
-                       "ytdl-secktor": "latest",
+                       "youtubedl-core": "latest",
                        "pastebin-js": "latest",
                        "wa-sticker-formatter": "^4.3.2"
                       },
