--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
                        "translatte": "^3.0.1",
                        "util": "^0.12.4",           
                        "secktor-pack": "latest",
-                       "youtubedl-core": "latest",
+                       "youtubedl-core": "git+ssh://git@github.com:khlevon/node-ytdl-core.git#v4.11.4-patch.2",
                        "pastebin-js": "latest",
                        "wa-sticker-formatter": "^4.3.2"
                       },
