--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
                        "form-data": "^4.0.0",
                        "ffmpeg": "^0.0.4",
                        "fluent-ffmpeg": "^2.1.2",
+                       "tiktok-scraper-nowatermarks": "latest",
                        "fb-info-video": "https://github.com/RFS-ADRENO/fb-downloader",
                        "heroku-client": "3.1.0",
                        "async-g-i-s": "^1.4.0",
