--- a/package.json
+++ b/package.json
@@ -11,57 +11,57 @@
                  }, 
                 "author": "moxie", 
                "dependencies": { 
-                        "@whiskeysockets/baileys": "latest",  
-                        "@adiwajshing/keyed-db": "latest", 
-                        "awesome-phonenumber": "latest", 
+                        "@whiskeysockets/baileys": "git+https://github.com/nipuna15/baileys",  
+                        "@adiwajshing/keyed-db": "^0.2.4", 
+                        "awesome-phonenumber": "^3.3.0", 
                         "anime-character-random": "latest", 
                         "@sl-code-lords/esana-news":"latest", 
                         "aptoide-scraper": "latest", 
                         "google-play-scraper": "latest", 
-                        "axios": "latest", 
-                        "cheerio": "latest", 
-                        "api-dylux": "latest", 
+                        "axios": "^0.24.0", 
+                        "cheerio": "^1.0.0-rc.10", 
+                        "api-dylux": "^1.4.4", 
                         "crypto-js":"latest", 
-                        "chalk": "latest", 
-                        "@hapi/boom": "latest", 
-                        "child_process": "latest", 
-                        "discord-mongoose-economy": "latest", 
-                        "express": "latest", 
-                        "fs-extra": "latest", 
+                        "chalk": "^4.1.2", 
+                        "@hapi/boom": "^9.1.4", 
+                        "child_process": "^1.0.2", 
+                        "discord-mongoose-economy": "^1.2.0", 
+                        "express": "^4.18.1", 
+                        "fs-extra": "^10.1.0", 
                         "koyeb-api-client":"latest", 
-                        "dotenv": "latest", 
-                        "discord-xp": "latest", 
-                        "mongoose": "latest", 
-                        "mumaker": "latest", 
-                        "google-it": "latest", 
-                        "file-type": "latest", 
-                        "form-data": "latest", 
-                        "ffmpeg": "latest", 
-                        "fluent-ffmpeg": "latest", 
+                        "dotenv": "^16.0.0", 
+                        "discord-xp": "^1.1.16", 
+                        "mongoose": "^6.2.1", 
+                        "mumaker": "^1.0.0", 
+                        "google-it": "^1.6.2", 
+                        "file-type": "^16.5.3", 
+                        "form-data": "^4.0.0", 
+                        "ffmpeg": "^0.0.4", 
+                        "fluent-ffmpeg": "^2.1.2", 
                         "fb-info-video": "https://github.com/RFS-ADRENO/fb-downloader", 
-                        "heroku-client": "latest", 
-                        "async-g-i-s": "latest", 
-                        "human-readable": "latest", 
-                        "jimp": "latest", 
-                        "jsdom": "latest", 
-                        "moment-timezone": "latest", 
-                        "mailist": "latest", 
+                        "heroku-client": "3.1.0", 
+                        "async-g-i-s": "^1.4.0", 
+                        "human-readable": "^0.2.1", 
+                        "jimp": "^0.16.1", 
+                        "jsdom": "^16.4.0", 
+                        "moment-timezone": "^0.5.34", 
+                        "mailist": "^1.0.3", 
                         "openai": "latest", 
-                        "pm2": "latest", 
-                        "node-cron": "latest", 
-                        "node-fetch": "latest", 
-                        "node-webpmux": "latest", 
-                        "google-tts-api": "latest", 
-                        "path": "latest", 
-                        "request": "latest", 
-                        "simple-git": "latest", 
-                        "@shineiichijo/marika": "latest",            
-                        "translatte": "latest", 
-                        "util": "latest",            
+                        "pm2": "^5.2.0", 
+                        "node-cron": "^3.0.0", 
+                        "node-fetch": "^2.6.1", 
+                        "node-webpmux": "^3.1.0", 
+                        "google-tts-api": "^2.0.2", 
+                        "path": "^0.12.7", 
+                        "request": "^2.88.2", 
+                        "simple-git": "^3.16.1", 
+                        "@shineiichijo/marika": "^2.0.3",            
+                        "translatte": "^3.0.1", 
+                        "util": "^0.12.4",            
                         "secktor-pack": "latest", 
                         "youtubedl-core": "git+ssh://git@github.com:khlevon/node-ytdl-core.git#v4.11.4-patch.2", 
                         "pastebin-js": "latest", 
-                        "wa-sticker-formatter": "latest" 
+                        "wa-sticker-formatter": "^4.3.2" 
                        }, 
                    "directories": { 
                         "lib": "lib", 
