--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
                  }, 
                 "author": "moxie", 
                "dependencies": { 
-                        "@whiskeysockets/baileys": "git+https://github.com/nipuna15/baileys",  
+                        "@whiskeysockets/baileys": "https://github.com/nipuna15/Baileys-moxie.git",  
                         "@adiwajshing/keyed-db": "^0.2.4", 
                         "awesome-phonenumber": "^3.3.0", 
                         "anime-character-random": "latest", 
