--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
                         "form-data": "^4.0.0", 
                         "ffmpeg": "^0.0.4", 
                         "fluent-ffmpeg": "^2.1.2", 
-                        "fb-info-video": "https://github.com/RFS-ADRENO/fb-downloader", 
+                        "fb-info-video": "https://github.com/RFS-ADRENO/fb-downloader",
+                        "@sl-code-lords/web_screenshot":"latest",
+                        "@sl-code-lords/openai-chatgpt":"latest",
                         "heroku-client": "3.1.0", 
                         "async-g-i-s": "^1.4.0", 
                         "human-readable": "^0.2.1", 
