--- a/app.json
+++ b/app.json
@@ -76,15 +76,19 @@
    }, 
    "MONGODB_URI": { 
      "description": "A secret String for Mongodb Connection.(Required),change for better experience", 
-     "value": "mongodb+srv://sam:sam@cluster0.u1smxsv.mongodb.net/?retryWrites=true&w=majority" 
+     "required": false  
    }, 
      "THEME": { 
      "description": "Put the theme name you want to use. Avilable themes are SECKTOR,ZEROTWO,NEZUKO,LUFFY,GOKU and many more..", 
       "value": "Blue-Lion" 
    }, 
      "WORKTYPE": { 
-   "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.", 
-          "value": "public" 
+      "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.", 
+      "value": "public" 
+   },
+   "ONLY_GROUP":{
+   "description":"Work only in group.",
+   "value":"false"
    }, 
        "AUTO_REACTION": { 
      "description": "Reacts emoji to all commands.", 
